[tool.poetry]
name = "moviepy-example"
version = "0.1.0"
description = ""
authors = ["c2io <c2io@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
typer = "^0.3.2"
moviepy = "^1.0.3"
gizeh = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
